k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openflights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openflights
  template:
    metadata:
      labels:
        app: openflights
    spec:
      containers:
        - name: web
          image: halad/openflights:latest
          ports:
            - containerPort: 3000
