k8s/service-rails.yaml
apiVersion: v1
kind: Service
metadata:
  name: openflights
spec:
  selector:
    app: openflights
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
